# sound

./: .gitignore  README.md
.claude/: settings.local.json
fromfartoclose/: ftc.ck  ftc2.ck  ftc2_doppler.ck  piano.ck  pluck_spatial.ck  sine.ck  sine_doppler.ck  sine_doppler_harmonics.ck  sine_spatial.ck  sword.ck
grandmothermoog/: gm.ck  gm_gui.py  pyproject.toml
leftright/: README.md  control_osc.py  melody_bank_stereo.ck  pyproject.toml  send_osc.py
timbre-transfer/: README.md  pyproject.toml  timbre_transfer_stft_stereo.py
timbre-transfer/input/: input.m4a
