[project]
name = "grandmothermoog"
version = "0.1.0"
description = ""
authors = [
    {name = "HoSan Ko",email = "gboon18@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "python-osc (>=1.9.3,<2.0.0)",
    "sounddevice (>=0.5.1,<0.6.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
