[project]
name = "leftright"
version = "0.1.0"
description = ""
authors = [
    {name = "HoSan Ko",email = "hko@avalanche.energy"}
]
requires-python = ">=3.12"
dependencies = [
    "python-osc (>=1.9.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
