[project]
name = "timbre-transfer"
version = "0.1.0"
description = ""
authors = [
    {name = "HoSan Ko",email = "hko@avalanche.energy"}
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
